# flowforge

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GUI_IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  run_gui.py  setup.py  test_gui.py
docs/: REAL_TIME.md  index.html
flowforge/: __init__.py  cli.py
flowforge/core/: __init__.py  ffmpeg.py  interpolator.py  rife.py  scene_detect.py
flowforge/gui/: __init__.py  __main__.py  app.py  drop_zone.py  export_dialog.py  main.py  main_window.py  playback.py  player.py  rife_toolbar.py  settings.py  utils.py  worker.py
flowforge/gui/widgets/: __init__.py  dragdrop.py  progress.py  settings.py
flowforge/playback/: __init__.py  launcher.py  mpv_config.py  presets.py  realtime_engine.py  stream_processor.py  vapoursynth_filter.py
flowforge/utils/: __init__.py  download.py
playback_scripts/: play_rife.bat  rife.vpy
scripts/: install_deps.sh  install_vapoursynth.ps1  install_vapoursynth.sh
tests/: __init__.py  test_ffmpeg.py
